# neuDrive

./: .env.example  .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  README.zh-CN.md  agenthub.env.example  docker-compose.yml  go.mod  go.sum  neudrive.env.example
.githooks/: pre-commit
.github/: dependabot.yml
docs/: browser-extension.md  browser-extension.zh-CN.md  cli-test-matrix.md  cli.md  cli.zh-CN.md  design.md  gpt-actions-schema.yaml  platform-coverage-matrix.md  reference.md  reference.zh-CN.md  setup.md  setup.zh-CN.md  sync-audit.md  sync-prodlike-acceptance.md  sync.md
extension/: background.js  content.css  content.js  manifest.json  popup.html  popup.js
migrations/: 001_initial_schema.sql  002_seed_data.sql  003_scoped_tokens.sql  004_auth_credentials.sql  005_realistic_seed_data.sql  006_memory_conflicts.sql  007_webhooks.sql  008_oauth_provider.sql  009_fix_column_types.sql  010_widen_oauth_client_id.sql  011_oauth_pkce.sql  012_foundation_v1_entries.sql  013_memory_scratch_append_only.sql  014_file_blobs.sql  015_sync_v2.sql  016_canonical_skills_paths.sql  017_local_git_mirrors.sql  018_local_git_mirror_automation.sql  019_git_mirror_execution_and_app_user.sql  020_external_auth_providers.sql
sdk/python/: README.md  pyproject.toml
sdk/python/agenthub/: __init__.py  auth.py  client.py  types.py
sdk/python/neudrive/: __init__.py  auth.py  client.py  types.py
sdk/python/tests/: sync_fixture.py  test_sync_integration.py
tools/: agentdrive_demo.sh  ahub-sync.py  install-agenthub.sh  install-neudrive.sh  neudrive_demo.sh  (+6 more)
(+449 files in other folders)
