[project]
name = "agenthub-sdk"
version = "0.1.0"
description = "Agent Hub SDK - AI identity and trust infrastructure"
requires-python = ">=3.10"
dependencies = ["httpx>=0.25.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agenthub"]
